<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="start_message">Tic Tac Toe</string>
    <string name="onePlayer">One Player</string>
    <string name="twoPlayer">Two Players</string>
    <string name="highscore">Highscores</string>

    <string name="playerOne">Player One: </string>
    <string name="playerTwo">Player Two: </string>

    <string name="playerOneWins">Player One Wins: </string>
    <string name="playerTwoWins">Player Two Wins: </string>
    <string name="draw">Draws: </string>
</resources>
