<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="375dp"
    android:layout_height="350dp"
    android:background="#ffffff"
    android:shrinkColumns="*"  android:stretchColumns="*">

    <TableRow
        android:layout_height="150dp"
        android:layout_width="375dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="125dp"
            android:layout_weight="1"
            android:width="75dp"
            android:height="100dp"
            android:background="@drawable/boardlayout"
            android:gravity="center"
            android:padding="20dp"
            android:text=""
            android:textColor="#000000" />

        <Button
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:height="100dp"
            android:background="@drawable/boardlayout"
            android:gravity="center"
            android:padding="20dip"
            android:text=""
            android:textColor="#000000" />

        <Button
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:height="100dp"
            android:background="@drawable/boardlayout"
            android:gravity="center"
            android:padding="20dip"
            android:text=""
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <Button
            android:text=""
            android:id="@+id/four"
            android:layout_weight="1"
            android:background="@drawable/boardlayout"
            android:textColor="#000000"
            android:height="100dp"
            android:padding="20dip"
            android:gravity="center"/>

        <Button
            android:text=""
            android:id="@+id/five"
            android:layout_weight="1"
            android:background="@drawable/boardlayout"
            android:textColor="#00FF00"
            android:height="100dp"
            android:padding="20dip"
            android:gravity="center"/>

        <Button
            android:text=""
            android:id="@+id/six"
            android:layout_weight="1"
            android:background="@drawable/boardlayout"
            android:textColor="#000000"
            android:height="100dp"
            android:padding="20dip"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <Button
            android:text=""
            android:id="@+id/seven"
            android:layout_weight="1"
            android:background="@drawable/boardlayout"
            android:textColor="#000000"
            android:height="100dp"
            android:padding="20dip"
            android:gravity="center"/>

        <Button
            android:text=""
            android:id="@+id/eight"
            android:layout_weight="1"
            android:background="@drawable/boardlayout"
            android:textColor="#000000"
            android:height="100dp"
            android:padding="20dip"
            android:gravity="center"/>

        <Button
            android:text=""
            android:id="@+id/nine"
            android:layout_weight="1"
            android:background="@drawable/boardlayout"
            android:textColor="#000000"
            android:height="100dp"
            android:padding="20dip"
            android:gravity="center"/>
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:paddingLeft="5dp"
            android:text="@string/playerOne" />

        <TextView
            android:id="@+id/firstPlayer"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/playerTwo" />

        <TextView
            android:id="@+id/secondPlayer"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/firstPlayerWins"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/playerOneWins"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/winCount1"
            android:paddingLeft="5dp"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_weight="0.00"
            android:text="0"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="5dp"
            android:textSize="10sp"
            android:id="@+id/draw"
            android:text="@string/draw"
            android:layout_weight="0.00" />

        <TextView
            android:id="@+id/drawCount"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:text="0"
            android:paddingLeft="5dp"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/secondPlayerWins"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:paddingLeft="5dp"
            android:text="@string/playerTwoWins"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/winCount2"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_weight="0.04"
            android:text="0"
            android:paddingLeft="5dp"
            android:textSize="10sp" />
    </LinearLayout>

</TableLayout>